# mobile-agent-bench

./: .gitignore  README.md  environment.yml  pyproject.toml
src/mobile_agent_benchmark/: bench_task.py  dummy_agent.py  log_manager.py  server.py  task_orchestrator.py
src/mobile_agent_benchmark/configs/: default.json
src/mobile_agent_benchmark/tasks/: __init__.py  calculator_add.py  calculator_cube.py  calculator_divide.py  calculator_length.py  calculator_minus.py  calculator_mixed.py  calculator_multiply.py  calculator_point.py  calculator_recalculate.py  calculator_square.py  calendar_create_and_search.py  calendar_daily_view.py  calendar_delete_tasks.py  calendar_laundry.py  calendar_new_task.py  calendar_next_month.py  calendar_open_about.py  calendar_search.py  calendar_snooze_time.py  calendar_start_week.py  contacts_about.py  contacts_create.py  contacts_delete.py  contacts_favorite.py  contacts_filter.py  contacts_hide_email.py  contacts_modify.py  contacts_remove_dialog.py  contacts_search.py  contacts_sort.py  filemanager_check_file_properties.py  filemanager_check_storage.py  filemanager_create_new_file.py  filemanager_delete_file.py  filemanager_delete_txt.py  filemanager_delete_videos.py  filemanager_hide_folder.py  filemanager_rename_file.py  filemanager_search.py  (+62 more)
